Added RWD at findEmo ~ myRecords / Without analyze page

--- a/pages/account.html
+++ b/pages/account.html
@@ -23,8 +23,8 @@
                     <div class="nav-btn d-flex justify-content-end">
                         <button class="d-none ms-16 btn btn-outline-main c-btn" id="btnCancel" type="button">取消</button>
                         <button class="ms-16 btn btn-outline-main c-btn" id="btnModify" type="button">編輯</button>
-                        <input type="submit" class="d-none ms-16 btn btn-outline-main c-btn" id="btnSave" value="儲存"></button>
-                        <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="accountMyFriends.html">好友管理</a>
+                        <input type="submit" class="d-none ms-16 btn btn-main c-btn" id="btnSave" value="儲存"></button>
+                        <!-- <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="accountMyFriends.html">好友管理</a> -->
                     </div>
                 </div>
 
