--- a/pages/findEmoClassified.html
+++ b/pages/findEmoClassified.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <!-- 手機版網頁 CSS Reset 螢幕解析度 Reset -->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-        <title>浪潮情緒卡｜找尋我的情緒｜分類探索</title>
+        <title>浪潮情緒卡｜探索情緒</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <!-- Bootstrap css -->
@@ -19,7 +19,7 @@
             <div class="sticky-top pb-4 bg-white">
                 <div class="container pt-16">
                     <div class="mb-16 pb-8 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
-                        <h2 class="fs-3">找尋我的情緒</h2>
+                        <h2 class="fs-3">探索情緒</h2>
                         <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
                             <i class="bi bi-folder2"></i>
                             <i class="bi bi-folder2-open"></i>
@@ -33,11 +33,11 @@
             <div class="accordion mb-12" id="accordionExample">
                 <div class="accordion-item border-2 border-main-tint02 rounded-2 bg-white">
                     <h2 class="accordion-header rounded-2" id="headingOne">
-                        <button class="accordion-button px-16 py-12 bg-white link-main text-main fs-6 fw-bold rounded-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="accordion-button px-16 py-12 bg-white link-main text-main fs-6 fw-bold rounded-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                         探索流程與方法
                         </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <h3 class="mb-4 fs-7 fw-bold">流程</h3>
                             <ol class="ps-24 mb-12" style="list-style-type: decimal">
