--- a/pages/myRecordsAnalyze.html
+++ b/pages/myRecordsAnalyze.html
@@ -14,15 +14,16 @@
   <body>
     <%- include('./layout/headerLoggedIn'); -%>
     <main>
-        <div class="container py-16 pt-72" id="top">
+        <div class="container py-16 pt-112" id="top">
             <!-- 標題 -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>我的紀錄｜分析</h2>
+            <div class="mb-20 pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                <h2 class="fs-3">我的紀錄｜分析</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="myRecords.html">紀錄</a>
-                    <div class="ms-16 btn-disable">分析</div>
+                    <div class="ms-16 btn-disable text-nowrap">分析</div>
                 </div>
             </div>
+            
             
             <!-- 搜尋條 & 分享 -->
             <div class="mb-24 d-flex justify-content-between align-items-center">
