--- a/pages/findEmoHate.html
+++ b/pages/findEmoHate.html
@@ -12,32 +12,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
-    <%- include('./layout/headerLoggedIn'); -%>
+    <div class="" id="top"></div>
+    <%- include('./layout/headerLoggedInNoFixed'); -%>
 
     <main>
-        <div class="container py-16 pt-72" id="top">
-            <!-- title bar -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>討厭</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">返回</a>
-                    <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
-                        <i class="bi bi-folder2"></i>
-                        <i class="bi bi-folder2-open"></i>
-                        <span class="ms-4">我的情緒卡夾</span>
-                    </a>
+        <!-- title bar -->
+        <div class="sticky-top pb-8 bg-white">
+            <div class="container pt-16">
+                <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                    <h2 class="fs-3">討厭</h2>
+                    <div class="nav-btn d-flex justify-content-end">
+                        <a class="btn btn-outline-main c-btn" href="findEmoClassifiedExpand.html">返回</a>
+                        <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
+                            <i class="bi bi-folder2"></i>
+                            <i class="bi bi-folder2-open"></i>
+                            <span class="ms-4">我的情緒卡夾</span>
+                        </a>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <p class="mb-44 text-gray-550">
-                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡夾」中。
+        <div class="container">
+            <p class="mt-16 mb-48 px-12 px-sm-0 text-gray-550">
+                🔎 點擊卡片，可閱讀該情緒的詳細內容。
             </p>
 
             <!-- cards -->
-            <div class="d-flex flex-wrap mb-72">
+            <div class="mb-72 d-flex flex-wrap justify-content-center justify-content-md-start">
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate01">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate01">
                         <p>無&nbsp;聊</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate01-boring.svg" alt="無聊">
@@ -46,7 +51,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate02">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate02">
                         <p>厭&nbsp;倦</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate02-weariness.svg" alt="厭倦">
@@ -55,7 +60,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate03">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate03">
                         <p>自&nbsp;卑</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate03-inferiority.svg" alt="自卑">
@@ -64,7 +69,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate04">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate04">
                         <p>討&nbsp;厭</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate04-hate.svg" alt="討厭">
@@ -73,7 +78,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate05">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate05">
                         <p>嫉&nbsp;妒</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate05-jealousy.svg" alt="嫉妒">
@@ -82,7 +87,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate06">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate06">
                         <p>厭&nbsp;惡</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate06-disgust.svg" alt="厭惡">
@@ -91,7 +96,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate07">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate07">
                         <p>噁&nbsp;心</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate07-nausea.svg" alt="噁心">
@@ -100,7 +105,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate08">
+                    <button type="button" class="class-card mb-36 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#addHate08">
                         <p>怨&nbsp;恨</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/07-hate/hate08-resentment.svg" alt="怨恨">
@@ -111,7 +116,7 @@
         </div>
     </main>
 
-    <%- include('./layout/floatButtons') -%>
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
