--- a/pages/findEmoUnstable.html
+++ b/pages/findEmoUnstable.html
@@ -12,32 +12,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   </head>
   <body>
-    <%- include('./layout/headerLoggedIn'); -%>
+    <div class="" id="top"></div>
+    <%- include('./layout/headerLoggedInNoFixed'); -%>
 
     <main>
-        <div class="container py-16 pt-72" id="top">
-            <!-- title bar -->
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>不安</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">返回</a>
-                    <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
-                        <i class="bi bi-folder2"></i>
-                        <i class="bi bi-folder2-open"></i>
-                        <span class="ms-4">我的情緒卡夾</span>
-                    </a>
+        <!-- title bar -->
+        <div class="sticky-top pb-8 bg-white">
+            <div class="container pt-16">
+                <div class="pb-8 px-12 px-sm-0 border-2 border-bottom border-main-tint02 d-flex justify-content-between align-items-center">
+                    <h2 class="fs-3">不安</h2>
+                    <div class="nav-btn d-flex justify-content-end">
+                        <a class="btn btn-outline-main c-btn" href="findEmoClassifiedExpand.html">返回</a>
+                        <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
+                            <i class="bi bi-folder2"></i>
+                            <i class="bi bi-folder2-open"></i>
+                            <span class="ms-4">我的情緒卡夾</span>
+                        </a>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <p class="mb-44 text-gray-550">
-                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡夾」中。
+        <div class="container">
+            <p class="mt-16 mb-48 px-12 px-sm-0 text-gray-550">
+                🔎 點擊卡片，可閱讀該情緒的詳細內容。
             </p>
-
+    
             <!-- cards -->
-            <div class="d-flex flex-wrap mb-72">
+            <div class="mb-72 d-flex flex-wrap justify-content-center justify-content-md-start">
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable01">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable01">
                         <p>害&nbsp;羞</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable01-shy.svg" alt="害羞">
@@ -46,7 +51,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable02">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable02">
                         <p>擔&nbsp;心</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable02-worry.svg" alt="擔心">
@@ -55,7 +60,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable03">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable03">
                         <p>迷&nbsp;惘</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable03-confused.svg" alt="迷惘">
@@ -64,7 +69,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable04">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable04">
                         <p>不&nbsp;安</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable04-anxious.svg" alt="不安">
@@ -73,7 +78,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable05">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable05">
                         <p>害&nbsp;怕</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable05-afraid.svg" alt="害怕">
@@ -82,7 +87,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable06">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable06">
                         <p>緊&nbsp;張</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable06-nervous.svg" alt="緊張">
@@ -91,7 +96,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable07">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable07">
                         <p>焦&nbsp;慮</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable07-anxious.svg" alt="焦慮">
@@ -100,7 +105,7 @@
                 </div>
                 <div class="position-relative me-24">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable08">
+                    <button type="button" class="class-card mb-36 bg-unstable link-gray-900 class-card-unstable" data-bs-toggle="modal" data-bs-target="#addUnstable08">
                         <p>恐&nbsp;懼</p>
                         <div class="img-box">
                             <img src="https://wavemocards.com/frontend/upload/04-unstable/unstable08-fear.svg" alt="恐懼">
@@ -111,7 +116,7 @@
         </div>
     </main>
 
-    <%- include('./layout/floatButtons') -%>
+    <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
     <%- include('./layout/modalEmoCardsPlus'); -%>
